--- a/src/components/user-auth/user-auth.css
+++ b/src/components/user-auth/user-auth.css
@@ -2,6 +2,13 @@
   box-sizing: border-box;
   /* soluciona todos os problemas de espaço */
 }
+main{
+  font-family: 'Poppins', sans-serif;
+  box-sizing: border-box;
+}
+.body{
+  font-family: 'Poppins', sans-serif;
+}
 .logo{
   align-self: flex-start;
   justify-self: flex-start;
@@ -82,9 +89,10 @@ main{
 }
 
 .main-content-container{
-  margin-top: 2.5rem;
+  margin-top: 1rem;
   width: 90%;
-  height: 65vh;
+  max-height: 65vh;
+  
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -100,11 +108,9 @@ main{
   color: black;
   padding: 1rem;
   padding-left: 0;
-  margin-bottom: 2rem;
   width: 90%;
   outline: 0;
   border: 0;
-  border-bottom: 1px solid ;
   text-align: left;
   margin-top: 0rem;
 }	
@@ -139,8 +145,11 @@ main{
 }
 
 .login-label-wrapper{
+  margin: 0;
+  padding: 0;
   width: 90%;
 }
+
 
 button{
   outline: none;
@@ -148,6 +157,7 @@ button{
   padding: 1rem;
   background-color: #5F4BB6;
   width: 90%;
+  font-family: 'Poppins';
   font-weight: 700;
   letter-spacing: 2.5px;
   color: #fff;
@@ -177,8 +187,28 @@ button:hover{
   margin-bottom: 5rem;
 }
 
+section .login-container{
+  min-height: 70vh;
+  max-height: 100vh;
+}
 
 @media(max-width:768px){
+
+  section .login-container{
+    min-height: 40vh;
+    max-height: 60vh;
+    text-align: center;
+  }
+  form{
+    margin-bottom: 1rem;
+    margin-top: 1rem;
+  }
+  .login-label-wrapper{
+    margin: 0;
+    padding: 0;
+    margin-top: 0rem;
+    margin-bottom: 3rem;
+  }
  
   .intro-welcome-header{
     font-size: 2.5rem;
@@ -204,8 +234,9 @@ button:hover{
   }
   .main-content{
     width: 100%;
-    max-height: 100vh;
+    max-height: 100%;
   }
+ 
   .intro-welcome{
 
     text-align: center;
