--- a/src/components/user-auth/user-auth.module.css
+++ b/src/components/user-auth/user-auth.module.css
@@ -2,19 +2,32 @@
   box-sizing: border-box;
   /* soluciona todos os problemas de espaço */
 }
+html{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 main{
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body{
+  margin: 0;
+  padding: 0;
 }
 .body{
+  margin: 0;
   font-family: 'Poppins', sans-serif;
 }
 .logo{
   align-self: flex-start;
   justify-self: flex-start;
-  
+  margin-top: 1rem;
+  padding: 1px;
   color: white;
-  font-size: 2rem;
+  width: 150px;
 }
 .intro,
 .main-content {
@@ -151,7 +164,7 @@ main{
 }
 
 
-button{
+.button{
   outline: none;
   font-size: 1rem;
   padding: 1rem;
@@ -178,7 +191,7 @@ button{
   transition: 0.5s;
 }
 
-button:hover{
+.button:hover{
   background-color: #342965;
   box-shadow: 0px 15px 20px #6451B8;
   color: #fff;
@@ -187,7 +200,7 @@ button:hover{
   margin-bottom: 5rem;
 }
 
-section .login-container{
+.login-container{
   min-height: 70vh;
   max-height: 100vh;
 }
