--- a/src/components/elements/header/Header.module.css
+++ b/src/components/elements/header/Header.module.css
@@ -55,6 +55,9 @@ a {
   text-decoration: none;
   color: black;
 }
+.nav-list .publicar-button{
+  padding: 0;
+}
 ul {
   list-style: none;
 }
@@ -107,6 +110,10 @@ a:hover{
   color: #fff;
   font-weight: 400;
   font-size: 1rem;
+}
+.header .button:hover{
+  background-color: #433582;
+  cursor: pointer;
 }
 
 .list{
