--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -57,5 +57,20 @@ html {
 }
 
 .content h1{
+  line-break: auto;
     font-size: 3rem;
+}
+
+@media (max-width: 768px){
+  .searchbar input{
+    font-size: 1rem;
+    padding: 2rem;
+  }
+  .search-icon {
+    padding: 2rem;
+  }
+  .content h1{
+    text-align: center;
+    font-size: 2rem;
+  }
 }
