--- a/src/components/user-data/User-data.module.css
+++ b/src/components/user-data/User-data.module.css
@@ -38,8 +38,13 @@ h2{
     font-size: 2rem;
     font-weight: 700;
 }
-.content{
+.content-wrapper{
     width: 33%;
+    display: flex;
+    flex-direction: column;
+}
+.content{
+    width: 100%;
    
 }
 label{
@@ -68,8 +73,38 @@ input{
 
 .disabled{
     background-color: #D9D9D9;
+    width: 100%;
+    border-radius: 30px;
+    padding: 1rem;
+    padding-left: 1.5rem;
+    outline: none;
+    border: black 1px solid;
+    font-size: 1.25rem;
+}
+.danger{
+    color: #ff0000;
+}
+.checkbox-div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-top: 1rem;
 }
 
+.danger-button{
+    background-color: #ff0000;
+    font-size: 1.5rem;
+    padding: 2rem;
+    border-radius: 60px;
+    color: white;
+    font-weight: 700;
+    border: 0;
+    margin-top: 2rem;
+}
+.danger-button:hover{
+    background-color: #e60000;
+    cursor: pointer;
+}
 .submit{
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -90,6 +125,9 @@ input{
 .items{
     padding-left: 4rem;
 }
+.content-wrapper{
+    margin-bottom: 4rem;
+}
 section a{
     gap: 0.5rem;
     text-decoration: none;
@@ -103,6 +141,7 @@ section a{
     align-items: center;
 }
 
+
 @media(max-width: 1000px){
     .section-wrapper{
         flex-direction: column;
@@ -115,6 +154,13 @@ section a{
         padding-left: 0;
     }
     .content{
+        width: 90%;
+        margin-top: 2rem;
+        margin-bottom: 5rem;
+    }
+    .content-wrapper{
+        justify-content: center;
+        align-items: center;
         width: 90%;
         margin-top: 2rem;
         margin-bottom: 5rem;
