--- a/src/components/user-auth/user-auth.module.css
+++ b/src/components/user-auth/user-auth.module.css
@@ -192,6 +192,7 @@ main{
 }
 
 .button:hover{
+  cursor: pointer;
   background-color: #342965;
   box-shadow: 0px 15px 20px #6451B8;
   color: #fff;
@@ -203,6 +204,10 @@ main{
 .login-container{
   min-height: 70vh;
   max-height: 100vh;
+}
+.signup-navigation{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 @media(max-width:768px){
