--- a/src/components/user-data/User-data.module.css
+++ b/src/components/user-data/User-data.module.css
@@ -13,7 +13,7 @@
   padding: 1.75rem;
 }
 
-main{
+.main{
     display: flex;
     flex-direction: column;
 }
@@ -30,11 +30,11 @@ main{
     margin-left: 2rem
 }
 
-h1{
+.dados-wrapper h1{
     font-size: 2.5rem;
     font-weight: 400;
 }
-h2{
+.dados-wrapper h2{
     font-size: 2rem;
     font-weight: 700;
 }
@@ -128,7 +128,7 @@ input{
 .content-wrapper{
     margin-bottom: 4rem;
 }
-section a{
+.items a{
     gap: 0.5rem;
     text-decoration: none;
     color: black;
@@ -171,14 +171,14 @@ section a{
     .submit{
         width: 100%;
     }
-    section a{
+    .items a{
         justify-content: center !important;
         text-align: left;
         width: 100%;
         border: 1px solid grey;
 
     }
-    section a:hover{
+    .items a:hover{
         background-color: grey;
         color: black;
     }
