--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -61,6 +61,10 @@ html {
     font-size: 3rem;
 }
 
+.favoritos-wrapper h1, .minhasPublicacoes-wrapper h1{
+  margin-top: 3rem;
+}
+
 @media (max-width: 768px){
   .searchbar input{
     font-size: 1rem;
