--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -13,6 +13,31 @@ html {
   justify-content: center;
   flex-direction: column;
 }
+.grid-container {
+  margin-top: 5rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
+  grid-gap: 20px;
+}
+
+.grid-item {
+  background-color: #fff;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 30px;
+  text-align: center;
+  padding: 2rem;
+}
+
+.img-item{
+  border-radius: 30px 30px 0 0;
+  width: 100%;
+  height: 30vh;
+  object-fit: cover;
+}
+
+
 .searchbar {
     
   margin-top: 3rem;
