--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -16,8 +16,9 @@ html {
 .grid-container {
   margin-top: 5rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
-  grid-gap: 20px;
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-gap: 40px;
+  margin-bottom: 35px;
 }
 
 .grid-item {
