arrumando visual da home

--- a/src/components/user-data/User-data.module.css
+++ b/src/components/user-data/User-data.module.css
@@ -141,6 +141,11 @@ input{
     align-items: center;
 }
 
+.hover-anchor:hover{
+    transition: 0.25s;
+    color: #5f4bb6;
+
+}
 
 @media(max-width: 1000px){
     .section-wrapper{
