--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -16,9 +16,23 @@ html {
 .grid-container {
   margin-top: 5rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   grid-gap: 40px;
   margin-bottom: 35px;
+  width: 100%;
+}
+.grey{
+  color: #8F8F8F;
+}
+.publication-items-wrapper{
+  margin-top: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.publication-items-wrapper h2{
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .grid-item {
@@ -29,6 +43,8 @@ html {
   border-radius: 30px;
   text-align: center;
   padding: 2rem;
+  cursor: pointer;
+  margin-right: 1rem;
 }
 
 .img-item{
