--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -36,6 +36,7 @@ html {
 }
 
 .grid-item {
+  color: inherit;
   background-color: #fff;
   padding: 20px;
   display: flex;
@@ -45,6 +46,7 @@ html {
   padding: 2rem;
   cursor: pointer;
   margin-right: 1rem;
+  max-width: 900px;
 }
 
 .img-item{
