--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 html{
     font-family: 'Poppins', sans-serif;
 }
+
+.swiper-pagination-bullet-active {
+    background-color: #fff !important;
+}
+
+.swiper-pagination-bullet {
+    --swiper-pagination-bullet-inactive-color: #fff;
+    --swiper-pagination-color: #fff; /* Cor do botão de paginação não ativo */
+  }
+
