--- a/src/components/home/Publicacao.module.css
+++ b/src/components/home/Publicacao.module.css
@@ -42,6 +42,7 @@
   background-color: white;
   padding: 1rem;
   margin-bottom: 2rem;
+  text-align: center;
 }
 
 .content-header h1 {
@@ -61,6 +62,13 @@
   margin-bottom: 2rem;
 }
 
+@media (max-width: 768px) {
+  .row {
+    flex-direction: column;
+  }
+}
+  
+
 .margin{
     margin-top: 1rem;
     margin-bottom: 2rem;
@@ -72,6 +80,10 @@
     width: 60%;
     border-radius: 45.5px;
     border: 0;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: #fff;
     background-color: #5f4bb6;
 }
