--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -38,7 +38,7 @@ html {
 
 .grid-item {
   color: inherit;
-  background-color: #fff;
+  background-color: white;
   padding: 20px;
   display: flex;
   position: relative;
@@ -48,14 +48,15 @@ html {
   padding: 2rem;
   cursor: pointer;
   margin-right: 1rem;
-  max-width: 900px;
+  max-width: 450px;
 }
 
 .img-item{
   border-radius: 30px 30px 0 0;
   width: 100%;
   height: 30vh;
-  object-fit: cover;
+  object-fit: contain;
+  background-color: #E5E5E5;
 }
 
 
