--- a/src/components/home/Publicacao.module.css
+++ b/src/components/home/Publicacao.module.css
@@ -16,7 +16,8 @@
 .img-slider {
   width: 100%;
   max-width: 900px;
- 
+ object-fit: contain;
+ border: 1px solid white;
   display: block;
   margin: 0 auto;
   height: 50vh;
