--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -18,7 +18,7 @@ html {
   max-width: 100%;
   display: grid;
   gap: 2rem;
-  grid-template-columns: repeat(auto-fit, minmax(240px, 3fr));
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
   list-style: none;
   padding: 0;
   justify-content: left;
@@ -54,6 +54,7 @@ html {
   padding: 2rem;
   cursor: pointer;
   max-width: 420px;
+  max-height: fit-content;
 
  
 }
@@ -108,6 +109,11 @@ html {
 
 .content{
     width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+
 }
 
 .content h1{
