--- a/src/components/home/Publicar.module.css
+++ b/src/components/home/Publicar.module.css
@@ -25,8 +25,32 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.input input{
+  border-radius: 30px;
+  color: #000;
+  background-color: #EBEBEB;;
+  border-radius: 30px;
+
+}
+.input fieldset {
+  border-radius: 30px;
+  border-color: #EBEBEB;
+
+  color: #000;
+}
+.input textarea{
+
+  background-color: #EBEBEB;
+
+}
+.input div{
+  border-radius: 30px;
+  background-color: #EBEBEB;
+
+}
 
 .content .input{
+ 
   width: 50%;
  /* 
   padding: 1rem;
