--- a/src/components/elements/header/Header.module.css
+++ b/src/components/elements/header/Header.module.css
@@ -112,6 +112,20 @@ ul {
   cursor: pointer;
 }
 
+.linksDin{
+  box-shadow: inset 0 0 0 0#5f4bb6;
+  color: white;
+  margin: 0 -.25rem;
+  padding: 0 .25rem;
+  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+.linksDin:hover {
+  
+  box-shadow: inset  190px 0 0 0 #5f4bb6;
+  font-weight: 300;
+  color:white;
+}
+
 .list{
   display: flex;
   flex-direction: row;
