--- a/src/components/home/Publicar.module.css
+++ b/src/components/home/Publicar.module.css
@@ -17,6 +17,34 @@
   border-radius: 30px;
 }
 
+.cancelar-button{
+  border: 0;
+  background-color: transparent;
+  color: #ffffff;
+  padding: 1rem;
+  background-color: #ff0000;
+  font-weight: 700;
+  font-size: 1.5rem;
+  margin-left: auto;
+  margin-right: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  cursor: pointer;
+}
+.cancelar-button:hover{
+  background-color: #cc0000;
+}
+
+.imagem-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
 .select{
   width: 100%;
   padding: 0.25rem;
